--- a/about.css
+++ b/about.css
@@ -11,7 +11,7 @@
 }
 
 html {
-    font-size: 50%;
+    font-size: 62.5%;
     overflow-x: hidden;
     scroll-padding-top: 5.5rem;
     scroll-behavior: smooth;
@@ -22,244 +22,391 @@ header {
     top: 0;
     left: 0;
     right: 0;
-    padding: 1rem 1rem;
+    padding: 0.5rem 1rem; /* Adjust padding as needed */
     display: flex;
     align-items: center;
     justify-content: space-between;
     z-index: 1000;
-    background-color: transparent;
-    transition: background-color 0.3s ease;
+    background-color: #000; /* Set initial background color to black */
+    height: 120px; /* Adjust the height of the navigation bar */
 }
 
-header.sticky {
+.sticky {
     background-color: #000;
     position: fixed;
-    top: -50px;
-    width: 100%;
-    height: 150px;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
 }
 
-header.sticky a {
-    color: #fff; /* Set text color to white for the sticky state */
+.sticky a {
+    color: #fff;
+    /* Set text color to white for the sticky state */
 }
 
 header .menu-icon {
-    font-size: 22px;
+    font-size: 16px; /* Adjust the font size of the icon */
     cursor: pointer;
     z-index: 1000;
-    display: flex;
-    margin-left: 1350px;
-    margin-top: 30px;
 }
 
 header .menu-icon .bx {
     color: #000000;
-    padding: 0px 10px 0px 10px;
-    display: none;
+    font-size: 20px;
 }
 
-header .menu-icon .bx:hover {
+.menu-icon .bx:hover {
     color: #ffffff;
 }
 
-.logo {
-    margin-top: 30px;
+.logo img {
+    height: 30px; /* Adjust the height of the logo */
+    width: auto;
+    margin-left: 10px; /* Adjust margin as needed */
+}
+
+.navbar-sticky {
     position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
 }
 
-.logo img{
-    height: 80px;
-    width: 160px;
-    margin-left: 70px;
-}
 
-nav ul{
-    position: relative;
-    left: 80%;
+nav ul {
+    list-style: none;
+    display: flex;
 }
 
 nav ul li {
-    margin-top: -70px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 2rem 0.5rem;
-    list-style: none;
+    margin-right: 1.5rem; /* Adjusted margin */
+}
+
+nav ul li:last-child {
+    margin-right: 0;
 }
 
 nav ul li a {
-    margin-right: 3px;
-    text-decoration: none;
-    font-size: 2.4rem;
-    border-radius: 2.4rem;
-    padding: .5rem 1rem;
-    color: #000000;
-}
-
-nav a.active,
-nav a:hover {
     color: #ffffff;
-    background-color: transparent;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1.4rem; /* Adjust font size */
+    padding: 0.5rem 0.6rem;
+    transition: color 0.3s ease;
 }
 
-section:nth-child(even) {
-    background: #e1e0e0;
+nav ul li a:hover {
+    color: #fff;
 }
 
-/* ----------------------About Us--------------------- */
+.container-fluid .row h1 {
+    font-size: 40px;
+    padding: 20px 0px;
+}
+
+header.sticky {
+    background-color: #000; /* Keep background color black when sticky */
+}
+
+/* Main Content */
+.about-section {
+    padding: 50px 0;
+    text-align: center;
+}
+
+.container-fluid .row {
+    margin-top: 120px;
+    font-size: 55px;
+}
+
+.about-section h2 {
+    font-size: 36px;
+    margin-bottom: 20px;
+}
+
+.about-section p {
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+.about-image {
+    width: 100%;
+    overflow: hidden; /* This ensures the image does not overflow its container */
+    margin: 0; /* Remove default margin */
+    padding: 0; /* Remove default padding */
+}
+
+.about-image img {
+    width: 100%; /* Adjusted to use full viewport width */
+    height: auto;
+    object-fit: cover;
+    margin: 0;
+    padding: 0;
+}
 
 .container {
-    background-size: cover;
-    background-position: center;
+    padding-top: 10px;
+    padding-bottom: 20px;
 }
 
-.container .image {
-    position: relative;
-    width: 0%;
-    margin: 0;
-    transition: opacity 1s;
+.container p {
+    font-size: 18px;
 }
 
-.text {
-    position: absolute;
-    top: 300px;
-    width: 100%;
-    padding: 120px; 
-    color: white; 
-    background: rgba(0, 0, 0, 0.5); 
-    text-align: center;
-    opacity: 0;
-    animation: right 1s ease forwards; 
-}
-
-.text h1{
-    margin-left: 560px;
-    position: absolute;
-    top: 100px;
-    font-size: 30px;
-    color: #ffffff;
-}
-
-/* -------------------content------------------ */
-
-.content1 {
-    padding: 50px 260px;
-}
-
-.content1 img {
-    height: 300px;
-    width: 1000px;
-}
-
-.content1 h1 {
-    font-size: 32px;
-    font-weight: bold;
-    padding: 0px 330px;
-    padding-bottom: 60px;
-}
-
-.content2 {
-    padding: 50px 300px;
-}
-
-.content2 h1 {
-    font-size: 32px;
-    font-weight: bold;
-    margin-left: 100px;
-    padding-bottom: 40px;
-}
-
-.content2 p {
-    font-size: 20px;
-    justify-content: center;
-}
-
-.content2 ul {
+.container ul {
     font-size: 16px;
-    margin-left: 50px;
 }
 
-/* ------------------footer-------------------- */
-
-section .content4 {
-    border-top: .1rem solid rgba(0,0,0,.1);
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-    gap: 1.5rem;
-    margin-left: 350px;
-    padding: 0px 10px;
+/* Mission Section */
+.mission-section {
+    background-color: #f5f5f5;
+    padding: 50px 0;
 }
 
-section .content4 img {
-    height: 150px;
-    width: 275px;
-    margin-top: 70px;
-    margin-left: -300px;
+.mission-section h2 {
+    font-size: 32px;
+    margin-bottom: 20px;
 }
 
-section .content4 .box {
-    margin-left: -250px;
+.mission-section p {
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+.mission-section .mission-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.mission-section .mission-content img {
+    max-width: 45%;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+.mission-section .mission-content p {
+    max-width: 45%;
+    text-align: left;
+}
+
+/* Services Section */
+.services-section {
+    padding: 50px 0;
+    text-align: center;
+}
+
+.services-section h2 {
+    font-size: 32px;
+    margin-bottom: 20px;
+}
+
+.services-section .service {
+    margin-bottom: 30px;
+}
+
+.services-section .service img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+.services-section .service h3 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.services-section .service p {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+/* Footer Styles */
+footer {
+    background-color: #f4f4f4;
+    padding: 2rem 1rem;
+    text-align: center;
+}
+
+.footer-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.footer-content img {
+    height: 12rem;
+    width: auto;
+    margin-bottom: 2rem;
+    margin-left: 20px;
+}
+
+.footer-links {
+    margin-right: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 2rem;
+}
+
+.box {
+    flex: 1;
+    margin-bottom: 2rem;
+    padding: 0 1rem;
+    text-align: left;
+}
+
+.box h3 {
+    font-size: 2.5rem; /* Increase font size for section titles */
+    margin-bottom: 1.5rem; /* Increase margin bottom for better separation */
+    color: #000000; /* White text color */
+}
+
+.box a {
     display: block;
-    padding: 50px 70px;
+    margin-bottom: 1rem;
+    font-size: 1.6rem;
+    color: #000000;
+    transition: color 0.3s ease;
 }
 
-section .content4 .box h3 {
-    text-align: center;
-    justify-content: center;
-    padding: .5rem 0;
-    font-size: 3rem;
-    color: #000;
+.box a:hover {
+    color: #b6b4b4;
+    text-decoration: none;
 }
 
-section .content4 .box a {
-    text-align: center;
-    justify-content: center;
-    display: block;
-    padding: .5rem 0;
-    font-size: 2rem;
-    color: #555;
+.credit {
+    background-color: #f4f4f4;
+    color: #000000;
+    padding: 2rem;
+    font-size: 1.6rem;
 }
 
-section .content4 .box a:hover {
-    color: rgb(0, 35, 233);
+.credit a img {
+    height: 3rem;
 }
 
-section .credit {
-    text-align: center;
-    border-top: .1rem solid rgba(0,0,0,.1);
-    font-size: 2.5rem;
-    color: #000;
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-    margin-top: 1.5rem;
+/* Additional padding between link sections */
+.box:not(:last-child) {
+    margin-right: 2rem;
 }
 
-section .credit img {
-    margin-left: 300px;
-    margin-top: -100px;
-    width: 100px;
-}
-
-section .credit p {
-    font-size: 15px;
-    margin-left: 1090px;
-    margin-top: -20px;
-}
-
-section .credit a {
-    color: #008624;
-}
-
-/* ---------------animation---------------- */
-
-@keyframes right {
-    0% {
-        transform: translateX(-100px);
-        opacity: 0;
+@media screen and (max-width: 992px) {
+    nav ul {
+        justify-content: center;
+        margin-right: 0;
     }
 
-    100% {
-        transform: translateX(0px);
-        opacity: 1;
+    nav ul li {
+        margin-left: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    nav ul {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        flex-direction: column;
+        justify-content: center;
+        background-color: #000000;
+        z-index: 1000;
+        transition: all 0.5s;
+    }
+
+    nav ul.active {
+        display: flex;
+    }
+
+    nav ul li {
+        margin: 1rem 0;
+    }
+
+    nav ul li a {
+        font-size: 2rem;
+        padding: 1rem 0;
+    }
+
+    .logo img {
+        margin-left: 1rem;
+    }
+
+    .title,
+    .title1 {
+        padding: 2rem 2rem; /* Adjust padding */
+        font-size: 2.5rem; /* Adjust font size */
+    }
+
+    /* Additional styles for sticky navigation */
+    header.sticky {
+        background-color: #000;
+    }
+
+    header.sticky nav ul li a {
+        color: #fff;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: #000;
+        z-index: 1000;
+        padding-top: 5rem; /* Adjust padding */
+    }
+
+    nav ul.active {
+        display: flex;
+    }
+
+    nav ul li {
+        margin: 1rem 0;
+    }
+
+    nav ul li a {
+        font-size: 1.6rem; /* Adjust font size */
+        padding: 1rem 0;
+    }
+    
+    .slideshow-text h1 {
+        font-size: 2.4rem;
+    }
+
+    .slideshow-text p {
+        font-size: 1.6rem;
+    }
+
+    .slideshow-text .btn {
+        font-size: 1.4rem;
+        padding: 0.8rem 1.6rem;
+    }
+
+    .content4 img {
+        height: 4rem;
+    }
+
+    .box h3 {
+        font-size: 1.8rem;
+    }
+
+    .box a {
+        font-size: 1.4rem;
+    }
+
+    .credit {
+        font-size: 1.4rem;
     }
 }
